Fixing small footer alignment issues

--- a/app/assets/css/includes/footer.css
+++ b/app/assets/css/includes/footer.css
@@ -15,40 +15,22 @@ footer {
     width:100%;
 }
 
-
-footer nav a {
-    color:black;
-    transition: 0.3s;
-    padding:0rem 0.5rem;
-    border-radius: 5px;
-    text-decoration: none;
-}
-
-footer nav a:hover {
-    background-color: white;
-    transition: 0.3s;
-}
-#footer-links {
-    display:flex;
-    flex-wrap: wrap;
+/* Footer main (navigation and logo) */
+#footer-main {
+    display: flex;
+    flex-direction: column;
+    padding:0rem 5vw;
+    gap:3rem;
     align-items: center;
-    justify-content: center;
-    gap:clamp(0.5rem, 2vw, 4rem);
+    flex-wrap: wrap;
+    width:100%;
 }
 
-.social-networks {
-    padding:0;
-    margin:0;
-    display:flex;
-    gap:1rem;
-    list-style-type: none;
-}
-
-hr {
-    width: 100%;
-    background-color: black;
-    height:2px;
-    border:none;
+@media (min-width: 768px) {
+    #footer-main {
+        justify-content: space-between;
+        flex-direction: row;
+    }
 }
 
 .footer-nav-container {
@@ -69,27 +51,64 @@ hr {
 .footer-nav-list {
     display: flex;
     flex-wrap: wrap;
-    align-items: center;
+    justify-content: center;
     gap:2rem;
 }
 
-#footer-main {
-    display: flex;
-    justify-content: space-between;
-    padding:0rem 5vw;
-    align-items: center;
-    flex-wrap: wrap;
-    width:100%;
+footer nav a {
+    color:black;
+    transition: 0.3s;
+    padding:0rem 0.5rem;
+    border-radius: 5px;
+    text-decoration: none;
 }
 
+footer nav a:hover {
+    background-color: white;
+    transition: 0.3s;
+}
+
+hr {
+    width: 100%;
+    background-color: black;
+    height:2px;
+    border:none;
+}
+
+
+/* Footer bottom (socials, name) */
 #footer-bottom {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column-reverse;
+    justify-content: center;
     align-items: center;
+    gap:2rem;
     width:90%;
     flex-wrap: wrap;
 }
 
+@media (min-width: 640px) {
+    #footer-bottom {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+}
+
+#footer-links {
+    display:flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+    gap:clamp(0.5rem, 2vw, 4rem);
+}
+
+.social-networks {
+    padding:0;
+    margin:0;
+    display:flex;
+    gap:1rem;
+    list-style-type: none;
+}
 
 .social-networks a {
     text-decoration: none;
